syntax="proto3";

package qrtz_job_details;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
message QrtzJobDetailsBean{

    string sched_name = 1;
    string  job_name=2;
    string job_group=3;
    optional string description=4;
    string job_class_name=5;
    bool is_durable=6;
    bool is_nonconcurrent=7;
    bool is_update_data=8;
    bool requests_recovery=9;
    optional bytes job_data=10;

}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzJobDetailsBeanService {
  rpc ListQrtzJobDetailsBeans(ListQrtzJobDetailsBeansRequest) returns (ListQrtzJobDetailsBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzJobDetailsBeans"
    };
  }

  rpc GetQrtzJobDetailsBean(GetQrtzJobDetailsBeanRequest) returns (QrtzJobDetailsBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzJobDetailsBeans/*}"
    };
  }

  rpc CreateQrtzJobDetailsBean(CreateQrtzJobDetailsBeanRequest) returns (QrtzJobDetailsBean) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzJobDetailsBeans"
      body: "QrtzJobDetailsBean"
    };
  }

  rpc UpdateQrtzJobDetailsBean(UpdateQrtzJobDetailsBeanRequest) returns (QrtzJobDetailsBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzJobDetailsBean.name=QrtzJobDetailsBeans/*}"
      body: "QrtzJobDetailsBean"
    };
  }

  rpc DeleteQrtzJobDetailsBean(DeleteQrtzJobDetailsBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzJobDetailsBeans/*}"
    };
  }
}

// message QrtzJobDetailsBean {
// ! This should be defined elsewhere
// }

message ListQrtzJobDetailsBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListQrtzJobDetailsBeansResponse {
  // The field name should match the noun "QrtzJobDetailsBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzJobDetailsBean QrtzJobDetailsBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzJobDetailsBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzJobDetailsBeanRequest {
  // The parent resource name where the QrtzJobDetailsBean is to be created.
  string parent = 1;

  // The QrtzJobDetailsBean id to use for this QrtzJobDetailsBean.
  string QrtzJobDetailsBean_id = 2;

  // The QrtzJobDetailsBean resource to create.
  // The field name should match the Noun in the method name.
  QrtzJobDetailsBean QrtzJobDetailsBean = 3;
}

message UpdateQrtzJobDetailsBeanRequest {
  // The QrtzJobDetailsBean resource which replaces the resource on the server.
  QrtzJobDetailsBean QrtzJobDetailsBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzJobDetailsBeanRequest {
  // The resource name of the QrtzJobDetailsBean to be deleted.
  string name = 1;
}
